--- a/driver.html
+++ b/driver.html
@@ -37,7 +37,7 @@
     #loginDiv input {
       margin: 5px;
       padding: 8px;
-      width: 200px;
+      width: 220px;
       font-size: 16px;
     }
     #loginDiv button {
@@ -65,7 +65,7 @@
       margin-top: 10px;
       font-weight: bold;
     }
-    input, textarea {
+    input, textarea, select {
       width: 100%;
       padding: 8px;
       margin-top: 5px;
@@ -103,6 +103,13 @@
     th {
       background-color: #ffcc00;
     }
+
+    /* Footer instructions */
+    #instructions {
+      margin-top: 20px;
+      font-size: 14px;
+      color: #555;
+    }
   </style>
 </head>
 <body>
@@ -117,6 +124,7 @@
     <input type="email" id="loginEmail" placeholder="Email">
     <input type="password" id="loginPass" placeholder="Password">
     <button onclick="login()">Login</button>
+    <p style="font-size:12px;margin-top:10px;color:#333;">Use your current credentials or change them below in the instructions section after login.</p>
   </div>
 
   <!-- Driver Content -->
@@ -126,6 +134,12 @@
     <audio id="bgMusic" autoplay loop playsinline controls>
       <source src="suno_trucker_loop.mp3" type="audio/mpeg">
     </audio>
+
+    <!-- Music Controls -->
+    <div style="text-align:center; margin-top:10px;">
+      <button class="actionButton" onclick="toggleMusic()">Mute / Unmute Music</button>
+      <input type="range" id="musicVolume" min="0" max="1" step="0.05" value="1" onchange="setVolume(this.value)">
+    </div>
 
     <!-- Driver Info -->
     <label for="driverName">Driver Name:</label>
@@ -155,14 +169,27 @@
     <!-- Logout -->
     <button class="actionButton" onclick="logout()">LOGOUT</button>
 
+    <!-- Instructions -->
+    <div id="instructions">
+      <p><strong>To change login email or password:</strong> Edit the <code>driver.html</code> file. Locate the login section in the script, and update:</p>
+      <pre style="background:#eee;padding:5px;">
+email === "LeftDoorShutDispatch@gmail.com" 
+pass === "Reny323"
+      </pre>
+      <p>After changing, save the file and redeploy.</p>
+    </div>
+
   </div>
 
   <script>
     // ---------- Login / Logout ----------
+    const correctEmail = "LeftDoorShutDispatch@gmail.com";
+    const correctPass = "Reny323";
+
     function login() {
       let email = document.getElementById("loginEmail").value;
       let pass = document.getElementById("loginPass").value;
-      if(email === "LeftDoorShutDispatch@gmail.com" && pass === "yourpassword") {
+      if(email === correctEmail && pass === correctPass) {
         alert("Logged in!");
         document.getElementById("loginDiv").style.display = "none";
         document.getElementById("driverContent").style.display = "block";
@@ -188,60 +215,4 @@
             <option value="Toll">Toll</option>
             <option value="Lumper">Lumper</option>
             <option value="Insurance">Insurance</option>
-            <option value="Tags/IFTA">Tags/IFTA</option>
-            <option value="Maintenance">Maintenance</option>
-            <option value="Business">Business</option>
-          </select>
-        </td>
-        <td><input type="number" step="0.01"></td>
-        <td><input type="file" accept="image/*,application/pdf" onchange="requireReceipt(this)"></td>
-      `;
-      tbody.appendChild(row);
-    }
-
-    function requireReceipt(input) {
-      if(!input.files.length) {
-        alert("Receipt required!");
-        input.previousElementSibling.value = "";
-      }
-    }
-
-    // ---------- Save & Load Driver Data ----------
-    function sendDriverData() {
-      let data = {
-        name: document.getElementById("driverName").value,
-        load: document.getElementById("loadInfo").value,
-        expenses: []
-      };
-
-      document.querySelectorAll("#expensesTable tbody tr").forEach(tr => {
-        let type = tr.cells[0].querySelector("select").value;
-        let amount = tr.cells[1].querySelector("input").value;
-        let receipt = tr.cells[2].querySelector("input").files[0]?.name || "";
-        data.expenses.push({type, amount, receipt});
-      });
-
-      localStorage.setItem("driverData", JSON.stringify(data));
-      alert("Driver data saved locally! Ready to send to admin.");
-    }
-
-    function loadSavedData() {
-      let saved = localStorage.getItem("driverData");
-      if(saved) {
-        let data = JSON.parse(saved);
-        document.getElementById("driverName").value = data.name;
-        document.getElementById("loadInfo").value = data.load;
-        if(data.expenses.length > 0) {
-          data.expenses.forEach(exp => {
-            addExpenseRow();
-            let tbody = document.getElementById("expensesTable").querySelector("tbody");
-            let lastRow = tbody.lastChild;
-            lastRow.cells[0].querySelector("select").value = exp.type;
-            lastRow.cells[1].querySelector("input").value = exp.amount;
-          });
-        }
-      }
-    }
-  </script>
-</body>
-</html>
+            <option value="Tags/IFTA">Tags
