--- a/driver.html
+++ b/driver.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #1e3a8a; /* deep blue */
+      background-color: #1e3a8a;
       margin: 0;
       padding: 0;
       color: #333;
@@ -18,7 +18,7 @@
       text-align: center;
       padding: 10px;
       background-color: white;
-      border-bottom: 4px solid #ffcc00; /* yellow border from logo */
+      border-bottom: 4px solid #ffcc00;
       position: sticky;
       top: 0;
       z-index: 1000;
@@ -89,7 +89,6 @@
       max-width: 720px;
     }
 
-    /* Expenses table */
     table {
       width: 100%;
       border-collapse: collapse;
@@ -102,13 +101,6 @@
     }
     th {
       background-color: #ffcc00;
-    }
-
-    /* Footer instructions */
-    #instructions {
-      margin-top: 20px;
-      font-size: 14px;
-      color: #555;
     }
   </style>
 </head>
@@ -124,7 +116,6 @@
     <input type="email" id="loginEmail" placeholder="Email">
     <input type="password" id="loginPass" placeholder="Password">
     <button onclick="login()">Login</button>
-    <p style="font-size:12px;margin-top:10px;color:#333;">Use your current credentials or change them below in the instructions section after login.</p>
   </div>
 
   <!-- Driver Content -->
@@ -158,8 +149,7 @@
           <th>Receipt (required)</th>
         </tr>
       </thead>
-      <tbody>
-      </tbody>
+      <tbody></tbody>
     </table>
     <button class="actionButton" onclick="addExpenseRow()">Add New Expense</button>
 
@@ -169,44 +159,32 @@
     <!-- Logout -->
     <button class="actionButton" onclick="logout()">LOGOUT</button>
 
-    <!-- Instructions -->
-    <div id="instructions">
-      <p><strong>To change login email or password:</strong> Edit the <code>driver.html</code> file. Locate the login section in the script, and update:</p>
-      <pre style="background:#eee;padding:5px;">
-email === "LeftDoorShutDispatch@gmail.com" 
-pass === "Reny323"
-      </pre>
-      <p>After changing, save the file and redeploy.</p>
-    </div>
-
   </div>
 
   <script>
-    // ---------- Login / Logout ----------
+    // ---------- Login ----------
     const correctEmail = "LeftDoorShutDispatch@gmail.com";
     const correctPass = "Reny323";
 
     function login() {
-      let email = document.getElementById("loginEmail").value;
-      let pass = document.getElementById("loginPass").value;
+      let email = document.getElementById("loginEmail").value.trim();
+      let pass = document.getElementById("loginPass").value.trim();
       if(email === correctEmail && pass === correctPass) {
-        alert("Logged in!");
         document.getElementById("loginDiv").style.display = "none";
         document.getElementById("driverContent").style.display = "block";
         loadSavedData();
       } else {
-        alert("Invalid login");
+        alert("Invalid login. Check email and password.");
       }
     }
 
     function logout() {
-      localStorage.setItem("driverSession", "false");
       location.reload();
     }
 
-    // ---------- Expenses Table ----------
+    // ---------- Expenses ----------
     function addExpenseRow() {
-      let tbody = document.getElementById("expensesTable").querySelector("tbody");
+      let tbody = document.querySelector("#expensesTable tbody");
       let row = document.createElement("tr");
       row.innerHTML = `
         <td>
@@ -215,4 +193,67 @@ pass === "Reny323"
             <option value="Toll">Toll</option>
             <option value="Lumper">Lumper</option>
             <option value="Insurance">Insurance</option>
-            <option value="Tags/IFTA">Tags
+            <option value="Tags/IFTA">Tags/IFTA</option>
+            <option value="Maintenance">Maintenance</option>
+            <option value="Business">Business</option>
+          </select>
+        </td>
+        <td><input type="number" step="0.01"></td>
+        <td><input type="file" accept="image/*,application/pdf" onchange="requireReceipt(this)"></td>
+      `;
+      tbody.appendChild(row);
+    }
+
+    function requireReceipt(input) {
+      if(!input.files.length){
+        alert("Receipt required!");
+        input.previousElementSibling.value = "";
+      }
+    }
+
+    // ---------- Save & Load ----------
+    function sendDriverData() {
+      let data = {
+        name: document.getElementById("driverName").value,
+        load: document.getElementById("loadInfo").value,
+        expenses: []
+      };
+      document.querySelectorAll("#expensesTable tbody tr").forEach(tr => {
+        let type = tr.cells[0].querySelector("select").value;
+        let amount = tr.cells[1].querySelector("input").value;
+        let receipt = tr.cells[2].querySelector("input").files[0]?.name || "";
+        data.expenses.push({type, amount, receipt});
+      });
+      localStorage.setItem("driverData", JSON.stringify(data));
+      alert("Driver data saved locally!");
+    }
+
+    function loadSavedData() {
+      let saved = localStorage.getItem("driverData");
+      if(saved) {
+        let data = JSON.parse(saved);
+        document.getElementById("driverName").value = data.name;
+        document.getElementById("loadInfo").value = data.load;
+        if(data.expenses.length > 0) {
+          data.expenses.forEach(exp => {
+            addExpenseRow();
+            let lastRow = document.querySelector("#expensesTable tbody").lastChild;
+            lastRow.cells[0].querySelector("select").value = exp.type;
+            lastRow.cells[1].querySelector("input").value = exp.amount;
+          });
+        }
+      }
+    }
+
+    // ---------- Music ----------
+    function toggleMusic() {
+      let music = document.getElementById("bgMusic");
+      music.muted = !music.muted;
+    }
+    function setVolume(vol) {
+      let music = document.getElementById("bgMusic");
+      music.volume = vol;
+    }
+  </script>
+</body>
+</html>
